# HYPERGRID-AI

./: CMakeLists.txt  README.md
assets/shaders/: example_shader.glsl
docs/: README.txt
src/ai/: AIUnit.cpp  AIUnit.h  PathfindingSystem.cpp  PathfindingSystem.h
src/core/: ClimateSystem.cpp  ClimateSystem.h  GameEngine.cpp  GameEngine.h
src/graphics/: HexTile.cpp  HexTile.h
src/ui/: MainWindow.cpp  MainWindow.h
tests/: test_placeholder.cpp
